src/components/pages/search.less
.SearchPage {}

.SearchPage-headline {
  padding-bottom: @edu-content-padding;
}

.SearchPage-controls {
  display: grid;
  column-gap: 15px;
  grid-template-columns: 1fr 1fr 1fr;

  @media @edu-media-phone {
    row-gap: 15px;
    grid-template-columns: 100%;
    grid-template-rows: 1fr 1fr 1fr;
  }
}

.SearchPage-filter {
  display: block;
  width: 100%;
}

.SearchPage-filterPlaceholder {
  display: flex;
  justify-content: space-between;
}

.SearchPage-filterPlaceholderIcon {
  align-self: center
}

.SearchPage-selectedTags {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  padding-top: @edu-content-padding;
  padding-bottom: 2 * @edu-content-padding;
}

.SearchPage-deselectTagsLink {
  padding-left: 10px;
  font-size: 12px;
}

.SearchPage-cellTags {
  display: flex;
  justify-content: flex-start;
}

